--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,5 +1,5 @@
 /* Ember supports plain CSS out of the box. More info: https://cli.emberjs.com/release/advanced-use/stylesheets/ */
-@import url(https://fonts.googleapis.com/css?family=Lato:300,300italic,400,700,700italic);
+@import url("https://fonts.googleapis.com/css?family=Lato:300,300italic,400,700,700italic");
 
 /**
  * Base Elements
@@ -22,7 +22,8 @@ div,
 span,
 a,
 button {
-  font-family: 'Lato', 'Open Sans', 'Helvetica Neue', 'Segoe UI', Helvetica, Arial, sans-serif;
+  font-family: Lato, "Open Sans", "Helvetica Neue", "Segoe UI", Helvetica, Arial,
+    sans-serif;
   line-height: 1.5;
 }
 
@@ -49,7 +50,7 @@ p {
  */
 
 .button {
-  padding: 10px 30px 10px;
+  padding: 10px 30px;
   text-decoration: none;
   color: #fff;
   background: #016aba;
@@ -82,8 +83,6 @@ p {
 
 .menu {
   height: 4em;
-  background-color: #677ae4;
-  background-color: #05526A;
   background-color: #e46855;
 }
 
@@ -106,6 +105,10 @@ p {
   color: #fff;
   font-size: 20px;
   font-weight: bold;
+}
+
+.rental h3 a {
+  display: inline;
 }
 
 .menu a:hover,
@@ -135,7 +138,7 @@ p {
   font-size: 18px;
   width: 500px;
   margin: 20px auto 50px;
-  background-color: rgba(255, 255, 255, 0.75);
+  background-color: rgb(255 255 255 / 75%);
   border: solid 1px lightgray;
   display: block;
 }
@@ -162,6 +165,10 @@ p {
   opacity: 1;
 }
 
+.results {
+  margin-top: -10px;
+}
+
 .menu .results {
   display: none;
   position: absolute;
@@ -169,12 +176,8 @@ p {
   top: 54px;
   left: 10px;
   background-color: #f6f6f6;
-  border-right: 1px solid rgba(0, 0, 0, 0.05);
-  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-}
-
-.results {
-  margin-top: -10px;
+  border-right: 1px solid rgb(0 0 0 / 5%);
+  border-bottom: 1px solid rgb(0 0 0 / 5%);
 }
 
 .results li {
@@ -265,7 +268,7 @@ p {
   outline: none;
 }
 
-.rental button.image:after {
+.rental button.image::after {
   content: "";
   position: absolute;
   top: 0;
@@ -281,8 +284,8 @@ p {
   transition: opacity 0.25s ease-in-out;
 }
 
-.rental button.image:focus:after,
-.rental button.image:hover:after {
+.rental button.image:focus::after,
+.rental button.image:hover::after {
   opacity: 0.1;
 }
 
@@ -291,7 +294,7 @@ p {
 }
 
 .rental .image.large {
-  margin: 30px 25px 50px 25px;
+  margin: 30px 25px 50px;
   flex-basis: 100%;
 }
 
@@ -308,7 +311,7 @@ p {
 
 .rental .image.large small {
   margin-top: 10px;
-  margin-bottom: 0px;
+  margin-bottom: 0;
   font-size: 110%;
 }
 
@@ -318,17 +321,12 @@ p {
   display: flex;
   height: 150px;
   margin: 20px 25px;
-  justify-content: space-between;
+  place-content: space-around space-between;
   flex-wrap: wrap;
-  align-content: space-around;
 }
 
 .rental h3 {
   flex-basis: 100%;
-}
-
-.rental h3 a {
-  display: inline;
 }
 
 .rental .detail {
@@ -347,7 +345,7 @@ p {
   flex-grow: 0;
   flex-basis: 150px;
   font-size: 0;
-  margin: 0px 25px;
+  margin: 0 25px;
 }
 
 .rental .map img {
@@ -365,7 +363,7 @@ p {
 }
 
 .rental.detailed .image.large {
-  margin: 30px 25px 50px 25px;
+  margin: 30px 25px 50px;
   flex-basis: 100%;
 }
 
@@ -379,7 +377,7 @@ p {
 }
 
 .rental.detailed .detail {
-  margin: 5px 0px;
+  margin: 5px 0;
   flex-basis: 100%;
   flex-shrink: 2;
 }
@@ -392,7 +390,7 @@ p {
 
 .rental.detailed .map {
   flex-basis: 100%;
-  margin: 50px 25px 25px 25px;
+  margin: 50px 25px 25px;
 }
 
 .rental.detailed .map img {
@@ -400,11 +398,10 @@ p {
   height: auto;
 }
 
-@media only screen and (max-width: 919px) {
-
+@media only screen and (width <= 919px) {
   .rental.detailed .image,
   .rental.detailed .image.large {
-    margin: 30px 25px 25px 25px;
+    margin: 30px 25px 25px;
     flex-basis: 100%;
     cursor: default;
   }
@@ -418,11 +415,11 @@ p {
     display: none;
   }
 
-  .rental.detailed button.image:hover:after {
+  .rental.detailed button.image:hover::after {
     opacity: 0;
   }
 
-  .rental.detailed button.image:focus:after {
+  .rental.detailed button.image:focus::after {
     opacity: 0.1;
   }
 
@@ -456,12 +453,11 @@ p {
 }
 
 .tomster {
-  background: url(../assets/images/teaching-tomster.png);
+  background: url("../assets/images/teaching-tomster.png");
   background-size: contain;
   background-repeat: no-repeat;
   height: 200px;
   width: 200px;
-
   position: relative;
   top: -25px;
 }
